--- a/page2.html
+++ b/page2.html
@@ -28,7 +28,7 @@
         </div>
 
         <footer class="footer">
-            <span>IMTIAZ (468429)</span>
+            <span>800 IMTIAZ (468429)</span>
             <span style="margin-left: 15px; margin-right: 15px;">|</span>
             <span>WWW.IMTIAZ.AE</span>
         </footer>
