--- a/page6.html
+++ b/page6.html
@@ -27,7 +27,7 @@
         <button type="submit" class="btn">SUBMIT</button>
     </form>    
     <footer class="footer">
-            <span>IMTIAZ (468429)</span>
+            <span>800 IMTIAZ (468429)</span>
             <span style="margin-left: 15px; margin-right: 15px;">|</span>
             <span>WWW.IMTIAZ.AE</span>
     </footer>
